--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0"
-    }
+    },
+    "name": "laract-breeze",
+    "version": "1.0.0",
+    "main": "index.js",
+    "repository": "https://github.com/Ayysz/laract-breeze.git",
+    "license": "MIT"
 }
